--- a/JavaScrip/css/calcu.css
+++ b/JavaScrip/css/calcu.css
@@ -8,9 +8,23 @@
 
 
 button{
-
+    width: 50px;
+    height: 50px;
     font-size: 40px;
     color: bisque;
     background-color: black;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 4px;
+    margin-right: 4px;
 
+}
+
+input{
+
+    display: block;
+    margin: 10px 0px;
+    font-size: 16px;
+    padding: 8px 20px;
+    background-color: azure;
 }
